# VulkanToy

./: CMakeLists.txt  JayRender.cpp  JayRender.h  README.md
Shaders/: 3DFrag.frag  3DVertex.vert
Shaders/Base/: frag.frag  vertex.vert
Source/: Buffer.cpp  Buffer.h  CommandManager.cpp  CommandManager.hpp  Context.cpp  Context.h  DescriptorManager.cpp  DescriptorManager.hpp  Engine.cpp  Engine.hpp  Framebuffers.hpp  QEM.cpp  QEM.h  RenderProcess.cpp  RenderProcess.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.hpp  Tools.cpp  Tools.h  UiContext.cpp  UiContext.hpp  Uniform.cpp  Uniform.h  UploadBuffer.cpp  UploadBuffer.hpp  Vertex.cpp  Vertex.h
Source/3D/: Camera.cpp  Camera.hpp  RawMesh.cpp  RawMesh.hpp  Scene.cpp  Scene.hpp
Source/3D/GameObject/: GameObject.cpp  GameObject.hpp
Source/Debug/: LogInfo.cpp  LogInfo.hpp
Source/Math/: MPoint3.h  Mrgb.h
Source/PolyMesh/: PolyMesh.cpp  PolyMesh.h
Source/RHI/: Framebuffers.cpp  Framebuffers.hpp  RHIDynamic.cpp  RHIDynamic.hpp  RHIInterface.cpp  RHIInterface.hpp  VulkanHelper.cpp  VulkanHelper.hpp
Source/Tools/: ImageLoader.cpp  ImageLoader.hpp  ModelLoader.cpp  ModelLoader.hpp  UIdAllocator.hpp
include/imgui-docking/backends/: imgui_impl_glfw.cpp
